--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         </form>
 
         <h2>Follow Us</h2>
-        <a href="https:facebook.com">Facebook</a> |
-        <a href="https:inta.com">Instagram</a>
+        <a href="https://www.facebook.com/">Facebook</a> |
+        <a href="https://www.instagram.com/">Instagram</a>
 </body>
 
 </html>
